fixed missalignment

--- a/src/components/_molecules/IconCard/IconCard.css
+++ b/src/components/_molecules/IconCard/IconCard.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
+  min-width: 170px;
 }
 
 .subtitle{
